# BackersLittlleHelper

./: .eslintrc.cjs  .gitignore  .pnp.cjs  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  create-icon.cjs  eslint.config.js  generate_asteroids.py  generate_asteroids_simple.py  generate_coin.py  generate_coin_clean.py  generate_coin_extruded.py  generate_coin_relief.py  generate_thick_coin.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: index.html
src/: App.vue  i18n.js  index.html  index.js  main.js  menu.js  renderer.js  scwiki.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: index.css
src/assets/models/: coin.mtl  coin_clean.mtl  coin_extruded.mtl  coin_relief.mtl  coin_thick.mtl
src/components/: Commlink.vue  Home.vue  Settings.vue  ThreeDBackground.vue  Tools.vue  Vehicles.vue
src/components/__tests__/: Commlink.test.js  Home.test.js  Settings.test.js  Tools.test.js  Vehicles.test.js
src/components/tools/: BackupListSection.vue  CopyEnvironmentsSection.vue  DirectoryCard.vue
src/composables/: useApiCache.js  useCommLinks.js  useSettings.js
src/composables/__tests__/: useApiCache.test.js  useCommLinks.test.js  useSettings.test.js
src/lib/: configuration.js
src/templates/: settings.html  ship_search.html
