[package]
name = "backers-little-helper"
version = "0.4.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
